[Enhancement][Clyde] Update sidebar menu icons

--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    font-size: 24px;
                   "
                 >
-                  🚀
+                <img
+                src="assets/images/18xZHlka.avif"
+                alt="Freebies Icon"
+                style="width: 30px; height: 30px; object-fit: contain;"
+              />
                 </div>
                 <div class="player-info">
                   <div class="player-name">Freebies Button</div>
@@ -72,10 +75,13 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    font-size: 24px;
                   "
                 >
-                  👑
+                <img
+                src="assets/images/nkGIOt9u.gif"
+                alt="Freebies Icon"
+                style="width: 30px; height: 30px; object-fit: contain;"
+              />
                 </div>
                 <div class="player-info">
                   <div class="player-name">Premium Skins</div>
@@ -94,7 +100,11 @@
                     font-size: 24px;
                   "
                 >
-                  ⚔️
+                <img
+                src="assets/images/hAcN9FxR.avif"
+                alt="Freebies Icon"
+                style="width: 30px; height: 30px; object-fit: contain;"
+              />
                 </div>
                 <div class="player-info">
                   <div class="player-name">Epic Skins</div>
@@ -112,7 +122,11 @@
                     font-size: 24px;
                   "
                 >
-                  🥇
+                <img
+                src="assets/images/k86gI2xm.avif"
+                alt="Freebies Icon"
+                style="width: 30px; height: 30px; object-fit: contain;"
+              />
                 </div>
                 <div class="player-info">
                   <div class="player-name">Rare & Champion Skins</div>
@@ -126,10 +140,13 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    font-size: 24px;
                   "
                 >
-                  🛡️
+                <img
+                src="assets/images/el99Kggq.avif"
+                alt="Freebies Icon"
+                style="width: 30px; height: 30px; object-fit: contain;"
+              />
                 </div>
                 <div class="player-info">
                   <div class="player-name">Beginner Skins</div>
@@ -288,7 +305,7 @@
                 Popular
               </div>
             </div>
-            <!-- <button class="theme-toggle" onclick="toggleTheme()"></button> -->
+            <button class="theme-toggle" onclick="toggleTheme()"></button>
           </div>
         </div>
         <div class="content-scrollable">
